Fix - spacing in notice -dismiss button

--- a/assets/css/review.scss
+++ b/assets/css/review.scss
@@ -6,7 +6,6 @@
 	}
 
 	.notice-dismiss{
-		padding: 0 0 0 26px;
 
 		&:before{
 			display: none;
